# actions

./: .gitignore  README.md  action.yml
.examples/CMake_project/: CMakeLists.txt
.examples/VisualStudio_project/: VisualStudio_project.sln  VisualStudio_project.vcxproj
.github/workflows/: cmake_test.yaml  extended_pull_request_test.yaml  versioning_test.yaml  visualstudio_test.yaml
CMAKE/: action.yaml
CMake/: action.yaml
Examples/CMake_project/: CMakeLists.txt
Examples/VisualStudio_project/: main.cpp
MSVC/: action.yaml
Publisher/: action.yaml
Versioning/: action.yaml
___versioning/: last_snapshot.txt
_test/random_folder/: macos-latest_PROJECT_PROJECT_Example  ubuntu-latest_PROJECT_PROJECT_Example
